--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing launchpad</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/launchpad.css">
 </head>
-<body>
-    <header>
-                
+<body class="raleway-unique">
+    <header class="header">
+        <nav>
+            <h3 class="inter-normal nav-title">LOGO</h3>
+            <ul>
+                <li><a href=""><button class="btn-primary">Sign up</button></a></li>
+            </ul>
+        </nav>
+               <div class="banner">
+                <h4 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h4>
+                <button class="btn-primary">Stay Focused</button>
+               </div> 
     </header>
     <main>
 
