--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
                </div> 
     </header>
     <main>
-
+        <div class="action">
+            <div class="action-content">
+                <h3 class="action-title">See It in Action</h3>
+                
+    <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.</p>
+    <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <img class="action-picture" src="Assets/wc-mini.png" alt="">
+        </div>
     </main>
     <footer>
 
