--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
                </div> 
     </header>
     <main>
-        <div class="action">
-            <div class="action-content">
-                <h3 class="action-title">See It in Action</h3>
-                
-    <p class="action-subtitle">Explore the live preview and imagine your brand in this bold new look.</p>
+        <!-- Action Section -->
+<section class="action">
+  <div class="action-text">
+    <h2>See it in Action</h2>
+    <p>Explore the live preview and imagine your
+       brand in this bold new look.</p>
     <button class="btn-primary">Launch Live Preview</button>
-            </div>
-            <img class="action-picture" src="Assets/wc-mini.png" alt="">
-        </div>
+  </div>
+  <div class="action-image">
+    <img src="Assets/wc-mini.png" alt="Action Image">
+  </div>
+</section>
+<!-- Productive Users Section -->
+  <section class="users">
+    <h2>Joined Thousands of Productive Users</h2>
+    <div class="stats">
+      <div><h3>50K</h3><p>Active Users</p></div>
+      <div><h3>2M+</h3><p>Focus Sessions</p></div>
+      <div><h3>95%</h3><p>Satisfaction Rate</p></div>
+    </div>
+  </section>
+
+
     </main>
     <footer>
 
