--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 </section>
 <!-- Productive Users Section -->
-  <section class="users">
+  <section class="members">
     <h2>Joined Thousands of Productive Users</h2>
     <div class="stats">
       <div><h3>50K</h3><p>Active Users</p></div>
@@ -47,6 +47,55 @@
       <div><h3>95%</h3><p>Satisfaction Rate</p></div>
     </div>
   </section>
+
+
+  <!-- Users' Feedback Section -->
+<section class="feedback">
+  <h2>What our users say</h2>
+  <div class="users">
+
+    <div class="user">
+      <p>⭐⭐⭐⭐⭐</p>
+       <strong>Loved by Designer</strong>
+      <p>"Amazing Template!"</p>
+      <div class="review-footer">
+        <img src="Assets/avatar.png" alt="Mr.Peter">
+        <div class="reviewer-info">
+          <p>Reviewer name</p>
+          <span>Date</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="user">
+      <p>⭐⭐⭐⭐⭐</p>
+      <strong>Loved by Designer</strong>
+      <p>"Really improved our workflow."</p>
+      <div class="review-footer">
+        <img src="Assets/avatar.png" alt="Mr.Smith">
+        <div class="reviewer-info">
+          <p>Reviewer name</p>
+          <span>Date</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="user">
+      <p>⭐⭐⭐⭐⭐</p>
+      <strong>Loved by Designer</strong>
+      <p>"Simple and clean design."</p>
+      <div class="review-footer">
+        <img src="Assets/avatar.png" alt="Mr.kalix">
+        <div class="reviewer-info">
+          <p>Reviewer name</p>
+          <span>Date</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 
     </main>
