--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
   <div class="users">
 
     <div class="user">
-      <p>⭐⭐⭐⭐⭐</p>
+      <div class="star">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+      </div>
        <strong>Loved by Designer</strong>
       <p>"Amazing Template!"</p>
       <div class="review-footer">
@@ -68,7 +74,13 @@
     </div>
 
     <div class="user">
-      <p>⭐⭐⭐⭐⭐</p>
+      <div class="star">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+      </div>
       <strong>Loved by Designer</strong>
       <p>"Really improved our workflow."</p>
       <div class="review-footer">
@@ -81,7 +93,13 @@
     </div>
 
     <div class="user">
-      <p>⭐⭐⭐⭐⭐</p>
+      <div class="star">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+        <img src="Assets/icon-star.png" alt="star icon">
+      </div>
       <strong>Loved by Designer</strong>
       <p>"Simple and clean design."</p>
       <div class="review-footer">
@@ -92,15 +110,39 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
 
+  <!-- Contact Section -->
+<section class="contact">
+  <div class="contact-text">
+    <h2>Let's Get in Touch</h2>
+  </div>
+  <div class="contact-form">
+    <label>Name:</label>
+    <input type="text" placeholder="full name" />
+    <label>Email:</label>
+    <input type="email" placeholder="abcd@gmail.com" />
+    <label>Message:</label>
+    <textarea placeholder="write your message"></textarea>
+    <button class="btn-primary">Get in Touch</button>
   </div>
 </section>
 
 
-
     </main>
-    <footer>
+   
+ <!-- Footer -->
+  <footer>
+    <h3 class="logo-size inter-normal">LOGO</h3>
+    <p>Ready to elevate your online presence?Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+    <div class="footer-links">
+      <a class="link-clr" href="">Home</a>
+      <a class="link-clr" href="">About</a>
+      <a class="link-clr" href="">How it works</a>
+      <a class="link-clr" href="">Services</a>
+    </div>
+  </footer>
 
-    </footer>
 </body>
 </html>
